--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Color Theme Swatches in Hex */
 :root { 
     --primary-color: #222428; 
     --sec-color: #F3F1F1;
@@ -10,6 +9,8 @@
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    /* overflow-x: hidden; */
+    /* border: .3px solid red; */
 }
 body {
     font-family: 'Nunito', sans-serif;
@@ -19,7 +20,7 @@ h1,
 h2,
 h3 {
     /* font-family: 'Nunito', sans-serif; */
-    font-family: 'Vollkorn', serif;
+    /* font-family: 'Vollkorn', serif; */
 }
 ul {
     list-style: none;
@@ -28,31 +29,42 @@ p {
     max-width: 600px;
     font-size: 20px;
 }
+a {
+    color: inherit;
+}
 .btn {
     color: #fff;
     background-color: var(--primary-color);
     border: none;
 }
 header {
-    z-index: 5;
-    color: #fff;
+    color: var(--primary-color);
+    width: 100vw !important;
+    z-index: 3;
     background-color: var(--sec-color);
 }
-.navbar .navbar-nav .nav-item {
-    color: var(--primary-color);
-}
-.navbar-light .navbar-toggler {
-    border: none;
-    outline: none;
-}
-.navbar-light .navbar-toggler-icon {
-    background-image: none;
-} 
-.navbar .mobile-nav {
+#hamburger-btn,
+.mobile-nav {
     display: none;
-} 
-  .hamburger .line{
-    width: 40px;
+}
+#hamburger {
+    width: 30px;
+    height: 30px;
+}
+.hamburger {
+    background-image: url('../images/hamburger.svg');
+    background-size: cover;
+}
+.close {
+    background-image: url('../images/close.svg');
+    background-size: cover;
+}
+.nav-link:hover,
+.nav-link.active {
+    text-decoration: none;
+}
+  /* .hamburger .line{
+    width: 30px;
     height: 3px;
     background-color: var(--primary-color);
     display: block;
@@ -101,10 +113,16 @@ header {
     -ms-transform: translateY(-10px) rotate(90deg);
     -o-transform: translateY(-10px) rotate(90deg);
     transform: translateY(-10px) rotate(90deg);
-  }
+  } */
 .landing-page {
     height: 100vh;
 }
+.landing-page h1 {
+    max-width: 550px;
+    font-size: 22px;
+    line-height: 1.5;
+}
+
 .go-up {
     bottom: 20px;
     right: 10px;
@@ -112,11 +130,6 @@ header {
 .go-up a {
     background-color: #000000;
     color: #ffffff;
-}
-.bg-black {
-    background-color: #000000;
-    width: 500px;
-    height: 100px;
 }
 .contact-page {
     background-color: var(--sec-color);
@@ -155,14 +168,6 @@ footer a {
     /* header {
         height: 10vh;
     } */
-    .show {
-        height: 100vh;
-        width: 80vw;
-    }
-    .landing-page h1 {
-        max-width: 270px;
-        font-size: 35px;
-    }
     .headings {
         font-size: 28px;
     }
@@ -177,19 +182,25 @@ footer a {
     .desktop-nav {
         display: none;
     }
-    .show {
-        display: block;
+    .mobile-nav {
         height: 100vh !important;
-        width: 80vw !important;
+        width: 70% !important;
+        background-color: var(--sec-color);
+        transition: background-color 3s ease-in, width 3s ease-in;
+    } 
+    #hamburger-btn {
+        display: block;
+    }
+    #hamburger-btn {
+        border: none;
+        outline: none;
+    }
+    .mobile-nav.show {
+        display: block;
+        z-index: 5;
     }
 
 }
-/* @media (max-width: 768px) {
-    .show {
-        height: 100vh;
-        width: 80vw;
-    }
-} */
 @media (min-width: 1000px) {
     .social-media-icons .fa {
         font-size: 25px;
