--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -58,24 +58,19 @@ section {
     margin: auto;
     padding: 15px 40px;
 }
-.card-img-top {
-    width: 100%;
-    border-radius: 5px 5px 0 0;
+.section-intro {
+    font-size: 11px;
+    filter: opacity(.9);
 }
 .card-body {
     padding: 20px;
 }
 .card {
-    /* box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2); */
     transition: 0.3s;
     border-radius: 5px;
 }
 .card p {
     margin-bottom: 20px;
-}
-.card-img {
-    width: 100%;
-    border-radius: 5px 0 0 5px;
 }
 .grid {
     display: grid;
@@ -89,6 +84,10 @@ section {
 }
 .w-100 {
     width: 100%;
+}
+.my {
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 a:hover {    
     filter: opacity(.7);
@@ -122,7 +121,7 @@ a:hover {
     background: var(--primary-color);
     position: fixed;
     padding: 10px 40px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
 }
 .header nav {
     justify-content: space-between;
@@ -140,8 +139,6 @@ a:hover {
     padding: 6px 10px;
 }
 .header-social-icons a {
-    /* margin: 2px 10px; */
-    /* display: inline-block; */
     justify-content: center;
     align-items: center;
     width: 28px;
@@ -157,12 +154,6 @@ a:hover {
     background-color: var(--sec-color);
     color: var(--primary-color);
 }
-/* .header-social-icons a:first-of-type {
-    margin-left: 0px;
-}
-.header-social-icons a:last-of-type {
-    margin-right: 0px;
-} */
 #hamburger-btn,
 .mobile-nav {
     display: none;
@@ -191,9 +182,20 @@ a:hover {
 #home-page h1 {
     max-width: 600px;
     font-size: 25px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.home-intro {
+    font-size: 20px;
 }
 .home-page-container {
     align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.home-btn {
+    margin-top: 10px;
+    width: 100px;
 }
 .go-up {
     position: fixed;
@@ -209,7 +211,7 @@ a:hover {
     position: relative;
 }
 .skill-card-contain {
-    padding: 20px;
+    padding: 30px 10px;
     width: 100%;
     height: 100%;
     align-items: center;
@@ -217,7 +219,7 @@ a:hover {
 }
 .about-card-skill {
     position: relative;
-    padding: 20px 10px;
+    padding: 20px 8px;
     width: 70%;
     /* height: 290px; */
     /* background-color: #000000; */
@@ -226,11 +228,11 @@ a:hover {
     /* column-count: 2; */
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    gap: 12px;
 }
 .about-page-card {
-    padding: 12px;
-    /* background-color: #ffffff; */
+    padding: 10px;
+    background-color: var(--primary-color);
     /* color: #000000; */
     border-radius: 8px;
     /* margin-bottom: 10px; */
@@ -273,6 +275,26 @@ a:hover {
 .certificate-btn:hover,
 .certificate-btn:active {
     filter: opacity(.7);
+}
+.certificate-img-contain {
+    position: fixed;
+    z-index: 10;
+    padding: 15px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* display: flex; */
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(38, 36, 37, .7);
+}
+.certificate-img-tag {
+    display: none;
+}
+.certificate-img {
+    max-width: 700px;
 }
 .skill-grid {
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -381,6 +403,15 @@ a:hover {
     flex-wrap: wrap;
     text-align: center;
 }
+.direct-info p {
+    max-width: 700px;
+    margin: 10px auto;
+    font-size: 12px;
+    text-align: center;
+}
+.direct-info a {
+    font: inherit;
+}
 footer {
     background-color: var(--primary-color);
     color: var(--sec-color);
@@ -407,11 +438,23 @@ footer {
     padding-right: 0px;
 }
 @media (max-width: 565px) {
+    .header,
     .container {
         padding: 10px 10px;
     }
+    .brand {
+        font-size: 22px;
+        font-weight: 600;
+    }
     .headings {
         font-size: 25px;
+    }
+    #home-page h1,
+    .headings {
+        font-size: 20px;
+    }
+    .home-intro {
+        font-size: 15px;
     }
     .project-grid {
         /* grid-template-columns: 1fr 1fr; */
