--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -96,10 +96,11 @@ a:hover {
     color: #fff;
     /* background-color: var(--primary-color); */
     background-color: var(--white);
-    color: var(--sec-color);
+    color: var(--primary-color);
     border: none;
-    padding: 8px 10px;
+    padding: 5px 10px;
     border-radius: 5px;
+    font: inherit;
     transition: background-color .3s ease-in, color .3s ease-in;
 }
 .btn:hover,
@@ -158,17 +159,27 @@ a:hover {
 .mobile-nav {
     display: none;
 }
-#hamburger {
+#hamburger-btn {
     width: 30px;
     height: 30px;
+    background: transparent;
+    outline: none;
+    border: none;
 }
-.hamburger {
+/* .hamburger {
     background-image: url('../images/hamburger.svg');
     background-size: cover;
 }
 .close {
     background-image: url('../images/close.svg');
     background-size: cover;
+} */
+.line {
+    height: 3px;
+    width: 28px;
+    margin-bottom: 5px;
+    display: block;
+    background-color: #ffffff;
 }
 .nav-link:hover,
 .nav-link.active {
@@ -192,6 +203,14 @@ a:hover {
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+.home-img {
+    width: 100px;
+    height: 100px;
+    display: block;
+    margin: auto;
+    border-radius: 50%;
+    margin-bottom: 10px;
 }
 .home-btn {
     margin-top: 10px;
@@ -441,6 +460,10 @@ footer {
     .header,
     .container {
         padding: 10px 10px;
+    }
+    #hamburger-btn,
+    .mobile-nav {
+        display: block;
     }
     .brand {
         font-size: 22px;
