--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -58,9 +58,18 @@ section {
     margin: auto;
     padding: 15px 40px;
 }
-.section-intro {
+.home-section-intro {
     font-size: 11px;
     filter: opacity(.9);
+}
+.section-intro {
+    font-size: 12px;
+    padding-left: 5px;
+    font-weight: 400;
+    /* border-left: 3px solid var(--sec-color); */
+    border-left: 2px solid var(--sec-color);
+    color: var(--sec-color);
+    /* filter: opacity(.9); */
 }
 .card-body {
     padding: 20px;
@@ -271,6 +280,9 @@ a:hover {
 }
 .edu-grid {
     grid-template-columns: 1fr 1fr;
+}
+.edu-card {
+    box-shadow: 0 2px 3px rgba(0, 0, 0, .2);
 }
 .edu-head {
     justify-content: space-between;
