--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -196,7 +196,7 @@ button:hover {
 }
 .header {
     color: var(--white);
-    z-index: 3;
+    z-index: 5;
     background: var(--primary-color);
     position: fixed;
     padding: 10px 40px;
@@ -209,6 +209,7 @@ button:hover {
 .brand {
     font-size: 25px;
     font-weight: 700;
+    color: var(--white);
 }
 .logo-blue {
     color: var(--sec-color);
@@ -272,8 +273,8 @@ button:hover {
     text-align: center;
 }
 .home-img {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     display: block;
     margin: auto;
     border-radius: 50%;
@@ -438,13 +439,15 @@ button:hover {
     cursor: pointer;
 }
 .project-card:hover img {
-    opacity: .4;
+    /* opacity: .4; */
 }
 .card-details {
     display: none;
     color: var(--white);
     position: absolute;
-    text-align: center;
+    text-align: center;    
+    height: 100%;
+    align-items: center;
     padding: 5px;
     z-index: 4;
     top: 50%;
@@ -455,7 +458,8 @@ button:hover {
     margin-bottom: 15px;
 }
 .project-card:hover .card-details {
-    display: block;
+    display: flex;
+    background-color: rgba(0, 0, 0, .5);
 }
 .contact-info-grid {
     grid-template-columns: 1fr 1fr;
@@ -479,7 +483,9 @@ button:hover {
 .contact-text {
     margin: 10px auto;
 }
-.contact-page .card,
+.error {
+    color: rgb(250, 64, 64);
+}
 .contact-page input,
 .contact-page textarea {
     background-color: var(--white);
@@ -490,12 +496,20 @@ button:hover {
 .contact-page input,
 .contact-page textarea {
     padding: 8px 30px;
-    /* outline: none; */
 }
-/* .contact-page input:focus,
+.contact-page input,
+.contact-page button,
+.contact-page textarea {
+    transition: 180ms box-shadow ease-in-out;
+    outline: none;
+}
+.contact-page input:focus,
+.contact-page button:focus,
 .contact-page textarea:focus {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, .4);
-} */
+    /* box-shadow: 2px 2px 4px rgba(0, 0, 255, .4); */
+    /* outline: 3px solid transparent; */
+    box-shadow: 0 0 3px #ddd;
+}
 .contact-page .card {
     text-align: center;
 }
@@ -602,13 +616,13 @@ footer {
         cursor: pointer;
     }
     .navigation-background {
-        height: 35px;
-        width: 35px;
+        height: 25px;
+        width: 25px;
         position: fixed;
         display: flex;
         z-index: 12;
         background-image: radial-gradient(var(--primary-color), var(--sec-color));
-        top: 12px;
+        top: 22px;
         right: 27px;
         border-radius: 50%;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
@@ -693,7 +707,7 @@ footer {
 @media (max-width: 568px) {
     .header,
     .container {
-        padding: 10px 10px;
+        padding: 10px 18px;
     }
     p {
         font-size: 16px;
@@ -710,7 +724,7 @@ footer {
         font-size: 25px;
     }
     .navigation-background {
-        right: 12px;
+        right: 20px;
     }
     #home-page h1,
     .headings {
