--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -279,6 +279,7 @@ button:hover {
     margin: auto;
     border-radius: 50%;
     margin-bottom: 10px;
+    background-color: rgba(255, 255, 255, .7);
 }
 .home-btn {
     margin-top: 10px;
