--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -392,12 +392,10 @@ button:hover {
 }
 .project-card {
     position: relative;
+    -webkit-column-break-inside: avoid;
 }
 .project-card:hover {
     cursor: pointer;
-}
-.project-card:hover img {
-    opacity: .9;
 }
 .card-details {
     display: none;
@@ -418,6 +416,8 @@ button:hover {
 .project-card:hover .card-details {
     display: flex;
     background-color: rgba(0, 0, 0, .5);
+    -webkit-column-break-inside: avoid;
+    backface-visibility: hidden;
 }
 .contact-info-grid {
     grid-template-columns: 1fr 1fr;
@@ -648,8 +648,7 @@ footer {
     }
     .home-intro {
         font-size: 15px;
-    }
-    
+    }   
     .mobile-none {
         display: none;
     }
@@ -659,17 +658,6 @@ footer {
     .header,
     .container {
         padding: 10px 18px;
-    }
-    p {
-        font-size: 16px;
-    }
-    #hamburger-btn,
-    .mobile-nav {
-        display: block;
-    }
-    .brand {
-        font-size: 22px;
-        font-weight: 600;
     }
     .headings {
         font-size: 25px;
@@ -689,9 +677,6 @@ footer {
     }
     .footer-div {
         flex-direction: column;
-    }
-    .mobile-none {
-        display: none;
     }
     .edu-grid,
     .project-grid,
