--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -372,32 +372,24 @@ button:hover {
     border-radius: 50px;
     top:  50%;
     left: 50%;
-    display: none;
-    transform: translateX(-50%);
-    transform: translateY(-50%);
-    /* transform: translateX(-50%); */
+    transform: translate(-50%, -50%);
     z-index: 5000;
-    opacity: 0.8;
-    /* animation: inOut 10s ease-in-out; */
+    /* opacity: 0.8; */
+    opacity: 0;
+    /* animation: inOut 5s ease-in-out 5s; */
 }
 .available-txt {
     font-size: 14px;
 }
 @keyframes inOut {
     0% {
-        top: -50%;
         opacity: 0;
-        transform: translateY(0%);
     }
     50% {
-        top: 50%;
-        opacity: 0.8;
-        transform: translateY(-50%);
+        opacity: 1;
     }
     100% {
-        top: -50%;
         opacity: 0;
-        transform: translateY(0%);
     }
 }
 .skill-grid {
