--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -16,6 +16,18 @@ body {
     background-color: var(--spare-color);  
     color: var(--white);  
 }
+body::-webkit-scrollbar {
+    width: 10px;
+}
+   
+body::-webkit-scrollbar-track {
+    background: var(--sec-color);
+}
+    
+body::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: var(--white);
+}
 ul {
     list-style: none;
 }
