--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -170,7 +170,6 @@ button:hover {
 .btn:active {
     filter: brightness(90%);
 }
-
 .headings {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -234,7 +233,6 @@ button:hover {
 .nav-link.active {
     text-decoration: none;
 }
- 
 #home-page {
     height: 100vh;
     background-color: var(--primary-color);
@@ -370,6 +368,7 @@ button:hover {
 .blue-link:disabled {    
     filter: brightness(80%);
 }
+.project-details-contain,
 .certificate-img-contain {
     position: fixed;
     z-index: 10;
@@ -436,7 +435,7 @@ button:hover {
 .project-grid-card {
     margin-bottom: 60px;
 }
-.project-card img {
+.project-card > .h-100 > img {
     border: 8px solid var(--primary-color);
     border-radius: 0px;
 }
@@ -446,6 +445,39 @@ button:hover {
 }
 .project-card:hover {
     cursor: pointer;
+}
+.show-details-check {
+    display: none;
+}
+.show-details-check:checked + .project-details-contain {
+    display: flex;
+}
+.project-details {
+    background-color: #FFFFFF;
+    color: var(--primary-color);
+    max-width: 480px;
+    margin: auto;
+    border-radius: 5px;
+    overflow: hidden;
+}
+.project-body {
+    padding: 20px 25px;
+}
+.project-desc {
+    font-size: 15px;
+    margin: 10px 0;
+}
+.technologies {
+    list-style-type: disc;
+    list-style-position: inside;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+.project-link {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid var(--primary-color);
+    font: inherit;
 }
 .card-details {
     display: none;
@@ -468,6 +500,37 @@ button:hover {
     background-color: rgba(0, 0, 0, .5);
     -webkit-column-break-inside: avoid;
     backface-visibility: hidden;
+}
+@keyframes InOut {
+    0% {
+        /* top: -100px; */
+        opacity: 0;
+    }
+    50% {
+        /* top: 140px; */
+        opacity: 0;
+    }
+    100% {
+        /* top: -100px; */
+        opacity: 0;
+    }
+}
+.form-toast {
+    position: fixed;
+    top: 140px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 100px;
+    padding: 5px 20px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .2);
+    background: rgba(0, 255, 0, .3);
+    animation: InOut 15s cubic-bezier(0,0.2,0.8,1) infinite;
+}
+.form-toast.success {
+    background: rgba(0, 255, 0, .3);
+}
+.form-toast.error {
+    background: rgba(255, 0, 0, .3);
 }
 .contact-info-grid {
     grid-template-columns: 1fr 1fr;
