--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -483,14 +483,14 @@ button:hover {
     display: none;
     color: var(--white);
     position: absolute;
-    text-align: center;    
-    height: 100%;
+    text-align: center;
     align-items: center;
     padding: 5px;
     z-index: 4;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 .card-details .card-title {
     margin-bottom: 15px;
